feat: fix deprecated `add-path` and remove `action-eslint`

--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -40,7 +40,7 @@ jobs:
 
     - name: yarn install
       run: |
-        echo "::add-path::$(yarn global bin)"
+        echo "$(yarn global bin)" >> $GITHUB_PATH
         yarn install --frozen-lockfile
         yarn global add @sentry/cli
 
