--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -57,7 +57,7 @@ jobs:
 
     # Setup gcloud CLI
     - name: Setup gcloud CLI
-      uses: google-github-actions/setup-gcloud@master
+      uses: google-github-actions/setup-gcloud@v0
       with:
         service_account_email: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_EMAIL }}
         service_account_key: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
